--- a/banks_project.ipynb
+++ b/banks_project.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
    "source": [
     "if __name__ == '__main__':\n",
     "    url = 'https://web.archive.org/web/20230908091635/https://en.wikipedia.org/wiki/List_of_largest_banks'\n",
-    "    output_csv_path = './Largest_banks_data.csv'\n",
+    "    output_csv_path = './output/Largest_banks_data.csv'\n",
     "    database_name = 'Banks.db'\n",
     "    table_name = 'Largest_banks'\n",
     "    #\n",
@@ -240,7 +240,7 @@
     "\n",
     "    df = ic(extract(url, 'By market capitalization'))\n",
     "\n",
-    "    transform(df, './data/exchange_rate.csv')\n",
+    "    transform(df, './input/exchange_rate.csv')\n",
     "\n",
     "    load_to_csv(df, output_csv_path)\n",
     "\n",
